--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="IMAGE/1748090885855.jpg" alt="[OKOLIE UCHECHUKWU FIDELIS] Profile" id="profile-img" style="height: 200px; width: 200px;">
+        <img src="1748090885855.jpg" alt="[OKOLIE UCHECHUKWU FIDELIS] Profile" id="profile-img" style="height: 200px; width: 200px;">
         <h1>Hello, I'm OKOLIE UCHECHUKWU FIDELIS></h1>
         <p>Passionate about web development and creating engaging experiences.</p>
     </header>
@@ -23,13 +23,13 @@
             <h2>Multimedia Showcase</h2>
             <h3>My Audio Greeting:</h3>
             <audio controls>
-                <source src="audio/Daylight- David Kushner.m4a" type="audio/mpeg">
+                <source src="Daylight- David Kushner.m4a" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
 
             <h3>A Quick Project Video:</h3>
             <video controls width="320" height="240">
-                <source src="video/VID-20250430-WA0178.mp4" type="video/mp4">
+                <source src="VID-20250430-WA0178.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </section>
